// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FlexContainer > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <div
    class="el-flex-container"
  >
    <p>
      I am child
    </p>
  </div>
</DocumentFragment>
`;

exports[`FlexContainer > should match a snapshot and render children with all props applied 1`] = `
<DocumentFragment>
  <div
    class="el-flex-container el-flex-row el-flex-row-reverse el-flex-column el-flex-column-reverse el-flex-wrap el-flex-no-wrap el-flex-wrap-reverse el-flex-auto el-flex-initial el-flex-grow0 el-flex-grow el-flex-shrink0 el-flex-shrink el-flex-justify-center el-flex-justify-end el-flex-justify-between el-flex-justify-around el-flex-justify-evenly el-flex-align-center el-flex-align-start el-flex-align-end el-has-grey-background"
  >
    <p>
      I am child
    </p>
  </div>
</DocumentFragment>
`;

exports[`MainContainer > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <main
    class="el-main-container el-has-grey-background"
  >
    <p>
      I am child
    </p>
  </main>
</DocumentFragment>
`;

exports[`PageContainer > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <section
    class="el-page-container el-has-grey-background"
  >
    <p>
      I am child
    </p>
  </section>
</DocumentFragment>
`;

exports[`SecondaryNavContainer > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <aside
    class="el-secondary-nav-container"
  >
    <p>
      I am child
    </p>
  </aside>
</DocumentFragment>
`;
